# dial

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/thompson_bandits/: __init__.py  bandit.py  stores.py  types.py
tests/: test_bandit.py  test_integration.py  test_stores.py
