[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fonz-dial"
version = "0.1.0"
description = "Online weight optimization via Thompson Sampling — learns optimal configurations from outcome feedback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alfonso DiRocco", email = "alfonso@kusp.dev" },
]
keywords = [
    "thompson-sampling",
    "bandits",
    "multi-armed-bandits",
    "optimization",
    "online-learning",
    "retrieval",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/fonz-ai/dial"
Repository = "https://github.com/fonz-ai/dial"
Issues = "https://github.com/fonz-ai/dial/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
